[gd_scene load_steps=21 format=3 uid="uid://1iyny16aqfha"]

[ext_resource type="Script" path="res://space_quiz/main/space_quiz.gd" id="1_n6cjm"]
[ext_resource type="Script" path="res://space_quiz/spaceship.gd" id="2_7pknx"]
[ext_resource type="Texture2D" uid="uid://brlrltp02vdqp" path="res://space_quiz/main/download.png" id="3_4fqrk"]
[ext_resource type="Script" path="res://space_quiz/meteor/meteor_spawner.gd" id="4_ka8yx"]
[ext_resource type="Texture2D" uid="uid://62crnhnghlya" path="res://space_quiz/Screenshot 2024-03-13 at 12.45.08.png" id="6_iatlp"]
[ext_resource type="Texture2D" uid="uid://d2timh8a1ir86" path="res://space_quiz/ui/heart.png" id="7_q215d"]
[ext_resource type="Texture2D" uid="uid://cs4a8oem410xg" path="res://space_quiz/ui/life-line.png" id="8_apfo1"]
[ext_resource type="Script" path="res://ui/pop_up_screen/question_pop_up_window.gd" id="8_ixcso"]
[ext_resource type="Texture2D" uid="uid://bwyahmyjmje33" path="res://space_background_image.webp" id="9_n3k23"]
[ext_resource type="FontFile" uid="uid://dh5dy7o21t2xc" path="res://font.ttf" id="10_awklr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xi6vq"]
size = Vector2(968, 448)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5l45"]
bg_color = Color(0.494118, 0, 0.509804, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ktas"]
texture = ExtResource("7_q215d")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4mp1s"]
texture = ExtResource("8_apfo1")

[sub_resource type="LabelSettings" id="LabelSettings_tcmxw"]
font = ExtResource("10_awklr")
font_size = 42
font_color = Color(0.494118, 0, 0.509804, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mo1me"]
bg_color = Color(0, 0, 0, 0.603922)

[sub_resource type="LabelSettings" id="LabelSettings_auaut"]
font = ExtResource("10_awklr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dvca"]
bg_color = Color(0.494118, 0, 0.509804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 1)
shadow_size = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uorr2"]
bg_color = Color(0.494118, 0, 0.509804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(1, 1, 1, 1)
shadow_size = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fy6p2"]
bg_color = Color(0.494118, 0, 0.509804, 1)
shadow_color = Color(1, 1, 1, 1)
shadow_size = 7

[node name="space_quiz" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_n6cjm")

[node name="spaceship" type="CharacterBody2D" parent="."]
position = Vector2(440, 800)
script = ExtResource("2_7pknx")

[node name="spaceship_texture" type="Sprite2D" parent="spaceship"]
position = Vector2(2, 4.00003)
scale = Vector2(1.0084, 0.943396)
texture = ExtResource("3_4fqrk")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="spaceship"]
polygon = PackedVector2Array(3, -94, -15, -77, -31, -41, -36, -8, -33, 31, -51, 46, -59, 70, -58, 90, -55, 99, -44, 82, -31, 71, -23, 67, -20, 74, -6, 71, -3, 90, 1, 99, 4, 98, 8, 83, 10, 71, 24, 74, 27, 67, 46, 80, 59, 99, 64, 86, 62, 66, 55, 47, 37, 31, 41, 1, 36, -37, 23, -72, 4, -93)

[node name="spacestation" type="CharacterBody2D" parent="."]
position = Vector2(440, 1300)

[node name="collision_shape" type="CollisionShape2D" parent="spacestation"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_xi6vq")

[node name="spaceship_texture" type="Sprite2D" parent="spacestation"]
position = Vector2(1.00003, 0)
scale = Vector2(0.760935, 0.667229)
texture = ExtResource("6_iatlp")

[node name="meteor_spawner" type="Node2D" parent="."]
script = ExtResource("4_ka8yx")

[node name="meteor_spawn_timer" type="Timer" parent="meteor_spawner"]
autostart = true

[node name="game__ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 382.0
offset_bottom = 136.0

[node name="game_health_overlay" type="Panel" parent="game__ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 8.0
offset_right = -116.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v5l45")

[node name="space_station_hp_bar" type="ProgressBar" parent="game__ui/game_health_overlay"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = -39.0
offset_right = 253.0
offset_bottom = -10.0
grow_vertical = 0
max_value = 3.0
step = 1.0
value = 1.0
show_percentage = false

[node name="space_station_hp_text" type="Label" parent="game__ui/game_health_overlay/space_station_hp_bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -43.5
offset_right = 64.0
offset_bottom = -17.5
grow_horizontal = 2
grow_vertical = 2
text = "Spacestation HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="space_station_hp_icon" type="Panel" parent="game__ui/game_health_overlay/space_station_hp_bar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -17.0
offset_right = -6.0
offset_bottom = 17.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1ktas")

[node name="question_lifeline_bar" type="ProgressBar" parent="game__ui/game_health_overlay"]
layout_mode = 1
offset_left = 45.0
offset_top = 23.0
offset_right = 253.0
offset_bottom = 52.0
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="question_life_lines_text" type="Label" parent="game__ui/game_health_overlay/question_lifeline_bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -39.5
offset_right = 79.0
offset_bottom = -13.5
grow_horizontal = 2
grow_vertical = 2
text = "Question lifelines"
horizontal_alignment = 1
vertical_alignment = 1

[node name="question_life_lines_icon" type="Panel" parent="game__ui/game_health_overlay/question_lifeline_bar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -17.0
offset_right = -6.0
offset_bottom = 17.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4mp1s")

[node name="question_pop_up" type="Window" parent="."]
initial_position = 2
size = Vector2i(650, 825)
visible = false
unresizable = true
always_on_top = true
script = ExtResource("8_ixcso")

[node name="background_texture" type="TextureRect" parent="question_pop_up"]
modulate = Color(1, 0.462745, 0.988235, 0.796078)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -896.0
offset_right = 512.0
offset_bottom = 896.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_n3k23")

[node name="game_titel_label" type="Label" parent="question_pop_up/background_texture"]
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -518.0
offset_right = 518.0
offset_bottom = 166.0
grow_horizontal = 2
text = "Choose you're answer or die!"
label_settings = SubResource("LabelSettings_tcmxw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="question_panel" type="Panel" parent="question_pop_up"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mo1me")

[node name="question_label" type="Label" parent="question_pop_up/question_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SOLVE THIS MATCHEMATICAL EQUEATION: 25*2^3"
label_settings = SubResource("LabelSettings_auaut")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="answer_1" type="Button" parent="question_pop_up"]
custom_minimum_size = Vector2(450, 130)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -65.0
offset_right = 225.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_awklr")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4dvca")
theme_override_styles/hover = SubResource("StyleBoxFlat_uorr2")
action_mode = 0
text = "850"
clip_text = true

[node name="answer_2" type="Button" parent="question_pop_up"]
custom_minimum_size = Vector2(450, 130)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = 82.5
offset_right = 225.0
offset_bottom = 212.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_awklr")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4dvca")
theme_override_styles/hover = SubResource("StyleBoxFlat_uorr2")
action_mode = 0
text = "Not solveable"
clip_text = true

[node name="answer_3" type="Button" parent="question_pop_up"]
custom_minimum_size = Vector2(450, 130)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = 232.5
offset_right = 225.0
offset_bottom = 362.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_awklr")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_4dvca")
theme_override_styles/hover = SubResource("StyleBoxFlat_fy6p2")
action_mode = 0
text = "1250"
clip_text = true

[connection signal="timeout" from="meteor_spawner/meteor_spawn_timer" to="meteor_spawner" method="_on_meteor_spawn_timer_timeout"]
[connection signal="pressed" from="question_pop_up/answer_1" to="question_pop_up" method="_on_answer_pressed" binds= [&"answer_1"]]
[connection signal="pressed" from="question_pop_up/answer_2" to="question_pop_up" method="_on_answer_pressed" binds= [&"answer_2"]]
[connection signal="pressed" from="question_pop_up/answer_3" to="question_pop_up" method="_on_answer_pressed" binds= [&"answer_3"]]
